# universal_symantics

./: .coverage  .coverage.Mac.localdomain.79228.XrXDEbVx  .coveragerc  .env  .gitignore  .pre-commit-hooks.yaml  AUDIT_CLEANUP_PLAN.md  AUTOMATED_PRIME_DISCOVERY_GUIDE.md  BENEFITS_OF_PRIMITIVES.md  CONTRIBUTING.md  CURRENT_DOCUMENTATION_STATUS.md  CURRENT_SYSTEM_ACHIEVEMENTS.md  EVALUATION_FRAMEWORK_SUMMARY.md  FINAL_PRIME_DETECTION_REPORT.md  FINAL_SUMMARY.md  FINAL_SYSTEM_EVALUATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUCCESS_REPORT.md  LANGUAGE_ADDITION_ANALYSIS.md  LANGUAGE_EXPANSION_SYSTEM.md  LICENSE  MARKDOWN_FILE_ANALYSIS.md  Makefile  NSM_SYSTEM_ASSESSMENT.md  PHASE_1_AND_2_IMPROVEMENTS_SUMMARY.md  PHASE_1_IMPROVEMENTS_SUMMARY.md  PHASE_A_COMPLETION_SUMMARY.md  PHASE_B_ADVANCED_COMPLETION_SUMMARY.md  PHASE_B_COMPLETION_SUMMARY.md  README.md  README_PRODUCTION.md  REALISTIC_PERFORMANCE_REPORT.md  REAL_WORLD_APPLICATION_EXAMPLES.md  REAL_WORLD_IMPROVEMENTS_SUMMARY.md  SYSTEM_ANALYSIS_AND_IMPROVEMENTS.md  TODOS_UPDATED.md  UNIVERSAL_TRANSLATOR_ARCHITECTURE.md  UNIVERSAL_TRANSLATOR_ROADMAP.md  USAGE.md  accurate_prime_test.py  (+219 more)
api/: clean_nsm_api.py  enhanced_nsm_api.py  nsm_detector_api.py  production_api.py
archive/: CORRECTED_FINAL_REPORT.md  DEEPNSM_INTEGRATION_SUMMARY.md  FINAL_CLEANUP_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASE_C_COMPLETION_SUMMARY.md  PHASE_C_PLUS_COMPLETION_SUMMARY.md  PHASE_D_COMPLETION_SUMMARY.md  PRIME_DETECTION_COMPLETION_REPORT.md  PRIME_DETECTION_IMPROVEMENT_REPORT.md  embedding_factorization_report.md  honest_audit_report.md  keep_union_en10k.txt
assets/: spatial_maps.json  umr_to_eil.yaml
data/: accepted_candidates_final.json  accepted_simple.json  advanced_ud_patterns_enhanced_report.json  aligned_primitives.json  aspect_mapper_audit_report.json  aspect_mapper_results.json  babelnet_alignment.json  babelnet_linking_enhanced_report.json  bmr_pipeline_enhanced_report.json  bn_cache.json  candidate_ud_mapping_en.json  candidate_ud_mapping_en_match_validator.json  candidate_ud_mapping_filtered.json  candidates_en_1k.json  candidates_en_1k_content.json  candidates_semantic_50.json  candidates_semantic_improved.json  combined_honest_report.json  combined_report_20250821_213641.json  combined_report_20250821_213713.json  combined_report_20250821_213944.json  combined_report_20250821_214006.json  combined_report_20250821_214144.json  combined_report_20250821_215100.json  comprehensive_dataset_1k_plus.json  corpus_testing_results.json  cross_language_testing_report.json  cross_language_truth_gates_results.json  deepnsm_integration_enhanced_report.json  detection_audit_report.json  detection_evidence_log.json  eil_reasoning_integration_results.json  eil_rulepack_v2_results.json  eil_rulepack_v3_results.json  enhanced_bn_cache.json  enhanced_nsm_comparison_report.json  enhanced_nsm_metrics_report.json  enhanced_ud_patterns_report.json  evaluation_manifest_stamp_demo.json  executable_interlingua_spec_report.json  (+77 more)
demo/: demo_server.py  demo_ui.py  improved_demo.py  (+3 more)
(+265 files in other folders)
